--- a/src/Restaurant.BLL/Restaurant.BLL.csproj
+++ b/src/Restaurant.BLL/Restaurant.BLL.csproj
@@ -12,6 +12,8 @@
 
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="13.0.0" />
+      <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.16" />
     </ItemGroup>
 
 </Project>
